<resources>
    <string name="app_name">Tilk</string>

    <string name="menu_item_settings">Paramètres</string>
    <string name="menu_item_logout">Déconnexion</string>

    <string name="debit_title">Débit</string>
    <string name="debit_unit">L/min</string>
    <string name="conso_title">Consommation</string>
    <string name="conso_jour">Journalière</string>
    <string name="conso_hebdo">Hebdomadaire</string>
    <string name="conso_mois">Mensuelle</string>
    <string name="conso_annuelle">Annuelle</string>
    <string name="evolution_title">Evolution</string>
    <string name="resume_conso_title">Votre consommation</string>
    <string name="resume_eco_title">Vos économies</string>
    <string name="eco_hebdo">Hebdomadaire</string>
    <string name="eco_mois">Mensuelle</string>
    <string name="eco_annuelle">Annuelle</string>

    <string name="tab_resume">Résumé</string>
    <string name="tab_douche">Douche</string>
    <string name="tab_lvaisselle">Lave-vaisselle</string>
    <string name="tab_toilettes">Toilettes</string>
    <string name="tab_machine">Machine à laver</string>

    <string name="activity_list_settings">Tilk - Paramètres</string>
    <string name="activity_settings_sensor">Paramètrer les capteurs</string>
    <string name="activity_settings_tilk">Paramètrer le Tilk</string>

    <string name="menu_label_settings">Paramètres</string>
    <string name="manu_label_logout">Deconnexion</string>

    <string name="login_label">Connexion</string>
    <string name="login_email">Email</string>
    <string name="login_pwd">Mot de passe</string>
    <string name="login_bad_format">Erreur de formatage</string>
    <string name="login_failed">Email/mot de passe incorrect</string>
    <string name="login_empty_pwd">Mot de passe vide</string>

    <string name="progressdialog_label_connexion">Connexion...</string>
    <string name="progressdialog_label_init">Initialisation...</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="title_activity_rooms">Configurer les pièces</string>

    <string name="session_checkbox_rooms">checkbox_rooms</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



</resources>
